--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "path": "^0.12.7",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
